--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
         "mongoose": "^8.3.3",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
+        "react-icons": "^5.2.1",
         "react-notifications-component": "^4.0.1",
         "react-router-dom": "^6.23.0",
         "redis": "^4.6.13",
